# msquic

./: .CodeQL.yml  .artifactignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .sscignore  BUILD.md  CLog.make  CMakeLists.txt  CMakePresets.json  CONTRIBUTING-zh.md  Cargo.toml  Directory.Packages.props  Dockerfile  Dockerfile.windows  Makefile  NuGet.config  README.html  README.md  THIRD-PARTY-NOTICES  THIRD-PARTY-NOTICES.md  azure-pipelines-triggered.yml  azure-pipelines.docker.yml  azure-pipelines.yml  build.ps1  cmakecommands.txt  codecov.yml  commits.html  common.build.post.props  common.build.pre.props  dashboard.html  data.js  data.js.in  dataTemplate.js  detailed.html  docfx.json  es-metadata.yml  generate-graphs.ps1  (+27 more)
core/: CMakeLists.txt  ack_tracker.c  ack_tracker.h  api.c  api.h  binding.c  binding.h  cid.h  congestion_control.c  congestion_control.h  connection.c  connection.h  crypto.c  crypto.h  crypto_tls.c  frame.c  frame.h  injection.c  inline.c  library.c  library.h  listener.c  listener.h  lookup.c  lookup.h  loss_detection.c  loss_detection.h  operation.c  operation.h  packet.c  packet.h  packet_builder.c  packet_builder.h  packet_space.c  packet_space.h  path.c  path.h  precomp.h  quicdef.h  range.c  (+28 more)
core/linux/: Makefile
core/unittest/: FrameTest.cpp  PacketNumberTest.cpp  RangeTest.cpp  main.cpp
core/winuser/: core.vcxproj
crates/libs/msquic-rs/: Cargo.toml  README.md
platform/: CMakeLists.txt  cert_capi.c  cert_openssl.c  cert_stub.c  datapath_linux.c  datapath_winuser.c  hashtable.c  inline.c  platform_internal.h  platform_linux.c  platform_winuser.c  selfsign_capi.c  selfsign_openssl.c  selfsign_stub.c  storage_linux.c  storage_winuser.c  tls_mitls.c  tls_openssl.c  tls_schannel.c  tls_stub.c
platform/linux/: Makefile
platform/unittest/: CryptTest.cpp  DataPathTest.cpp  StorageTest.cpp  TlsTest.cpp  main.cpp
platform/unittest/linux/: DataPathTest.c  Makefile  TlsTest.c
platform/winuser/: platform.vcxproj
src/core/: .gitignore  CMakeLists.txt  ack_event.h  ack_tracker.c  ack_tracker.h  api.c  api.h  bbr.c  bbr.h  binding.c  binding.h  cid.h  configuration.c  configuration.h  congestion_control.c  congestion_control.h  connection.c  connection.h  connection_pool.c  core.kernel.vcxproj  core.vcxproj  crypto.c  crypto.h  crypto_tls.c  cubic.c  cubic.h  cubic_impl.c  cubic_impl.h  datagram.c  datagram.h  deadline_engine.c  frame.c  frame.h  injection.c  inline.c  library.c  library.h  listener.c  listener.h  lookup.c  (+58 more)
src/core/krml/: CircularBufferWrapper.c  CircularBufferWrapper.h
src/core/unittest/: BbrTest.cpp  CMakeLists.txt  CubicTest.cpp  FrameTest.cpp  PacketNumberTest.cpp  PartitionTest.cpp  RangeTest.cpp  RecvBufferBenchTest.cpp  RecvBufferTest.cpp  SendTest.cpp  SettingsTest.cpp  SlidingWindowExtremumTest.cpp  SpinFrame.cpp  TicketTest.cpp  TransportParamTest.cpp  VarIntTest.cpp  VersionNegExtTest.cpp  main.cpp  main.h
src/core/verified/: RecvBufferWrapper.h  bench_recv_buffer.c  krmlinit.c  krmlinit.h  krmlinit_rv.c  plot.sh  verified_prims_support.c  verified_recv_buffer.c  verified_recv_buffer.h  verified_support.h
src/inc/: CMakeLists.txt  clog.h  mana_ndspi.h  msquic.h  msquic.hpp  msquic.kernel.post.props  msquic.kernel.pre.props  msquic.ver  msquic_darwin.h  msquic_fuzz.h  msquic_ioctl.h  msquic_linux.h  msquic_posix.h  msquic_winkernel.h  msquic_winuser.h  msquichelper.h  msquicp.h  nddef.h  ndspi.h  ndstatus.h  ndsupport.h  quic_cert.h  quic_crypt.h  quic_datapath.h  quic_driver_connection.h  quic_driver_helpers.h  quic_driver_main.h  quic_driver_run.h  quic_hashtable.h  quic_pcp.h  quic_platform.h  quic_platform_darwin.h  quic_platform_dispatch.h  quic_platform_linux.h  quic_platform_posix.h  quic_platform_winkernel.h  quic_platform_winuser.h  quic_sal_stub.h  quic_storage.h  quic_tls.h  (+7 more)
src/perf/lib/: CMakeLists.txt  HpsClient.cpp  HpsClient.h  LatencyClient.cpp  LatencyClient.h  LatencyHelpers.h  NetSecPerfMain.cpp  PerfAbstractionLayer.h  PerfBase.h  PerfClient.cpp  PerfClient.h  PerfCommon.h  PerfHelpers.h  PerfServer.cpp  PerfServer.h  RpsClient.cpp  RpsClient.h  RpsServer.cpp  RpsServer.h  SecNetPerf.h  SecNetPerfMain.cpp  SendRequest.h  Tcp.cpp  Tcp.h  ThroughputClient.cpp  ThroughputClient.h  ThroughputCommon.h  ThroughputServer.cpp  ThroughputServer.h  TokenBucket.cpp  TokenBucket.h  perflib.kernel.vcxproj  quicmain.cpp
src/perf/svc/: CMakeLists.txt  main.c
src/platform/: CMakeLists.txt  cert_capi.c  cert_capi_openssl.c  cert_openssl.c  cert_stub.c  certificates_capi.c  certificates_darwin.c  certificates_posix.c  cgroup.c  crypt.c  crypt_bcrypt.c  crypt_openssl.c  crypt_symcrypt.c  darwin_openssl.c  datapath_darwin.c  datapath_demikernel.c  datapath_dpdk.c  datapath_dpdk.h  datapath_dpdk_clang.c  datapath_epoll.c  datapath_iouring.c  datapath_kqueue.c  datapath_kqueue2.c  datapath_linux.c  datapath_linux.h  datapath_psn.c  datapath_raw.c  datapath_raw.h  datapath_raw_dpdk.c  datapath_raw_dummy.c  datapath_raw_framing.c  datapath_raw_framing.h  datapath_raw_linux.c  datapath_raw_linux.h  datapath_raw_socket.c  datapath_raw_socket.h  datapath_raw_socket_common.c  datapath_raw_socket_linux.c  datapath_raw_socket_unix.c  datapath_raw_socket_user.c  (+61 more)
src/platform/libbpf/: .travis.yml  BPF-CHECKPOINT-COMMIT  CHECKPOINT-COMMIT  README.md
src/platform/unittest/: AllocTest.cpp  CMakeLists.txt  CryptTest.cpp  DataPathTest.cpp  Platform.cpp  PlatformTest.cpp  StorageTest.cpp  TlsTest.cpp  ToeplitzTest.cpp  main.cpp  main.h  test.pfx
src/test/ioctltestbin/: CMakeLists.txt  main.cpp
src/test/lib/: ApiTest.cpp  BasicTest.cpp  CMakeLists.txt  DataTest.cpp  DatagramTest.cpp  DatapathWinUserTest.cpp  (+22 more)
src/tools/: CMakeLists.txt  toolbase.cmake
submodules/: CMakeLists.txt
test/lib/: ApiTest.cpp  CMakeLists.txt  DrillDescriptor.cpp  DrillDescriptor.h  EventTest.cpp  QuicDrill.cpp  QuicTest.cpp  TestAbstractionLayer.h  TestConnection.cpp  TestConnection.h  TestHelpers.h  TestListener.cpp  TestListener.h  TestStream.cpp  TestStream.h  precomp.h
tools/sample/: CMakeLists.txt  sample.cpp
(+62639 files in other folders)
